--- a/inz/bibliografia.bib
+++ b/inz/bibliografia.bib
@@ -78,5 +78,22 @@ YEAR = 2000
   howpublished = "\url{http://dev.mysql.com/doc/refman/5.6/en/introduction.html}",
   note = "[Online; dostęp 26.11.2014]"
 }
+@misc{developer.google.maps,
+  title = {{Google}},
+  howpublished = "\url{https://developers.google.com/maps/documentation/webservices/}",
+  note = "[Online; dostęp 16.11.2014]"
+ }
+ @misc{szablon,
+  title = {{szablon}},
+  howpublished = "\url{http://templated.co/linear}",
+  note = "[Online; dostęp 16.11.2014]"
+ }
+ @misc{eclipse,
+  title = {{eclipse with adnroid sdk}},
+  howpublished = "\url{https://developer.android.com/sdk/index.html}",
+  note = "[Online; dostęp 11.11.2014]"
+ }
+ 
+
 
 
