--- a/inz/bibliografia.bib
+++ b/inz/bibliografia.bib
@@ -1,21 +1,7 @@
-@book{bar,
-AUTHOR = "Janek Sranek",
-TITLE = "Ksiazka o pupie",
-PUBLISHER = {srydawnctwo},
-ADDRES = {kupadolek},
-YEAR = 2000
-}
 @misc{javaWikiPL,
   title = {{Java}},
   howpublished = "\url{http://pl.wikipedia.org/wiki/Java}",
   note = "[Online; dostęp 16.11.2014]"
-}
-@book{gag,
-AUTHOR = "Janek Dupa",
-TITLE = "Kupa o pupie",
-PUBLISHER = {srydawnctwo},
-ADDRES = {kupadolek},
-YEAR = 2000
 }
 @misc{developer.android,
   title = {{Android}},
@@ -30,12 +16,12 @@ YEAR = 2000
 @misc{java.doc,
   title = {{dokumentacj Javy}},
   howpublished = "\url{https://docs.oracle.com/javase/specs/jls/se8/html/index.html}",
-  note = "[Online; dostęp 16.11.2014]"
+  note = "\newline[Online; dostęp 16.11.2014]"
 }
 @misc{apache.wiki,
   title = {{Apache HTTP serwer}},
   howpublished = "\url{http://en.wikipedia.org/wiki/Apache_HTTP_Server}",
-  note = "[Online; dostęp 16.11.2014]"
+  note = "\newline[Online; dostęp 16.11.2014]"
 }
 @misc{apache.tomcat,
   title = {{Apache Tomcat}},
@@ -60,13 +46,13 @@ YEAR = 2000
 @misc{java.mvc,
   title = {{Java MVC}},
   howpublished = "\url{http://www.oracle.com/technetwork/articles/javase/index-142890.html}",
-  note = "[Online; dostęp 26.11.2014]"
+  note = "\newline[Online; dostęp 26.11.2014]"
 }
 
 @misc{java.mvc.grafika,
   title = {{Java MVC}},
   howpublished = "\url{http://www.javatpoint.com/model-1-and-model-2-mvc-architecture}",
-  note = "[Online; dostęp 26.11.2014]"
+  note = "\newline[Online; dostęp 26.11.2014]"
 }
 @misc{tomcat.org,
   title = {{Tomcat.org}},
@@ -76,12 +62,12 @@ YEAR = 2000
 @misc{Mysql.com,
   title = {{MySQL}},
   howpublished = "\url{http://dev.mysql.com/doc/refman/5.6/en/introduction.html}",
-  note = "[Online; dostęp 26.11.2014]"
+  note = "\newline[Online; dostęp 26.11.2014]"
 }
 @misc{developer.google.maps,
   title = {{Google}},
   howpublished = "\url{https://developers.google.com/maps/documentation/webservices/}",
-  note = "[Online; dostęp 16.11.2014]"
+  note = "\newline[Online; dostęp 16.11.2014]"
  }
  @misc{szablon,
   title = {{szablon}},
@@ -91,7 +77,7 @@ YEAR = 2000
  @misc{eclipse,
   title = {{eclipse with adnroid sdk}},
   howpublished = "\url{https://developer.android.com/sdk/index.html}",
-  note = "[Online; dostęp 11.11.2014]"
+  note = "\newline[Online; dostęp 11.11.2014]"
  }
  
 
